--- a/Galaxy.Rmd
+++ b/Galaxy.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "DU High throughput sequencing and rare diseases - Introduction to Galaxy"
-author: "Stephanie Le Gras$^{1}$ - slegras@igbmc.fr"
-date: "2024 December 11th"
+author: "Stephanie Le Gras$^{1}$ $^{2}$ - slegras@unistra.fr"
+date: "2025 December 17th"
 output:
   html_document:
     fig_caption: yes
@@ -21,18 +21,18 @@ bibliography: references.bib
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, root.dir="~/Documents/Formations/2023/DUDijon")
+knitr::opts_chunk$set(echo = TRUE, root.dir="~/Documents/Formations/2026/DUDijon")
 ```
 
-$^1$ GenomEast platform, IGBMC
+$^1$ Plateau technique de biologie moléculaire et bioinformatique, INCI - LNCA, Strasbourg
+
+$^2$ Équipe Modulation épigénétique des processus neurodégénératifs, LNCA, Strasbourg
 
 # - Log in to Galaxy
 - Go to the [Galaxy France website](https://usegalaxy.fr/).
 - Log in to your account. If you do not have an account, register first.
 
 ![][login]
-
-Once done, please visit this [page](https://usegalaxy.fr/join-training/dudijon-dec2024).
 
 # - History
 ## - Create a New History
@@ -47,7 +47,7 @@ Once done, please visit this [page](https://usegalaxy.fr/join-training/dudijon-d
 ![][renamehistory]
 
 # - Importing Files from Your Computer to Galaxy
-- Download the file **sample.bed.gz** from [this link](https://seafile.igbmc.fr/d/e5ff06e2623344e68a20/) and upload it to Galaxy.
+- Download the file **sample.bed.gz** from [this link](https://seafile.unistra.fr/f/50e5f01d331b40da977f/) and upload it to Galaxy.
   - Genome: Mouse (mm9)
   - Format: bed
 
@@ -77,7 +77,7 @@ Once done, please visit this [page](https://usegalaxy.fr/join-training/dudijon-d
 ![][showDeletedDatasets]
 
 # - Running a Tool
-- Download the files **CRN-107_11-R1.fastq.gz** and **CRN-107_11-R2.fastq.gz** from [this link](https://seafile.igbmc.fr/d/1adaad8f80394182a784/).
+- Download the files **CRN-107_11-R1.fastq.gz** and **CRN-107_11-R2.fastq.gz** from [this link](https://seafile.unistra.fr/d/f216d984266f496b8063).
 - Import them into your “DNA-seq data analysis” history:
   - Genome: Human Feb. 2009 (GRCh37/hg19) (hg19)
   - Format: `<auto detect>`
@@ -105,6 +105,8 @@ Once done, please visit this [page](https://usegalaxy.fr/join-training/dudijon-d
 
 # - Running Tools Without a Workflow
 Analyze the CRN-107 data from reads to variant annotation.
+
+We will limit the analysis to targets located on chromosome 4. Download the file CaptureDesign_chr4.bed [here](https://seafile.unistra.fr/d/f216d984266f496b8063/) and import it to Galaxy.
 
 ## - Tools and Parameters:
 1. **Map with BWA-MEM ** map medium and long reads (> 100 bp) against reference genome
