edit freebayes version

--- a/Galaxy.Rmd
+++ b/Galaxy.Rmd
@@ -128,6 +128,7 @@ We will limit the analysis to targets located on chromosome 4. Download the file
     - Select SAM/BAM dataset or dataset collection: **output of BWA mem**
     - Select validation stringency: Silent
 3. **FreeBayes** bayesian genetic variant detector
+    - **Choose Freebayes version 1.3.9+galaxy1** (see example below for snpEff) 
     - BAM or CRAM dataset: **output (bam) of markduplicates**
     - Using reference genome: hg19
     - Limit variant calling to a set of regions?
